--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,28 +1,16 @@
-html, body
-{
-  background-color: #fff;
-  color: #000;
-  letter-spacing: 0.5px;
-  font-family: "Source Sans Pro", Arial, sans-serif;
-  height: 100vh;
+a,a:hover,a:focus{
+  text-decoration: none !important;
+  color: inherit !important;
+}
+input:focus{
+  outline: none;
+}
+h1,h2,h3,h4,h5,h6{
+  padding: 0;
   margin: 0;
 }
-
-footer
-{
-  padding: 20px;
-  text-align: center;
-  border-top: 1px solid #ddd;
-}
-
-a, a:hover, a:focus, a:visited
-{
-  color: #000;
-}
-
-.logo {
-  width: 100%;
-  height: auto;
-  max-width: 400px;
-  max-height: 289px;
+ul,ol,dl {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
