--- a/assets/css/sign.css
+++ b/assets/css/sign.css
@@ -1,201 +1,195 @@
-
-html,body{
-     height: 100%;
-     background-color: #f1f1f1 !important;
- }
-.sign{
-    /*定位属性-》盒子模型-》文本-》用户*/
-    height: 100%;
-    font-size: 14px;
-    text-align: center;
-    background-color: #f1f1f1;
+.sign {
+    height:100%;
+    font-size:14px;
+    text-align:center;
 }
-.logo{
-    position: absolute;
-    top: 50px;
-    left: 50px;
+.logo {
+    position:absolute;
+    top:50px;
+    left:50px;
 }
 .logo img {
-    width: 100px;
+    width:100px;
 }
-.main{
-    width: 400px;
-    margin: 200px auto 0;
-    padding: 50px 50px 30px;
+.main {
+    width:400px;
+    margin:50px auto 0;
+    padding:50px 50px 30px;
+    background-color:#fff;
     border-radius: 4px;
-    box-shadow: 0 0 8px rgba(0,0,0,0.1);
-    display: inline-block;
-    background-color: #fff;
+    box-shadow: 0 0 8px rgba(0,0,0,.1);
+    display:inline-block;
 }
- .main .title{
-     margin: 0 auto 50px;
-     padding: 10px;
-     color: #939393;
- }
- .main .title h4{
-     margin: 0;
-     font-size: 18px;
- }
- .main .title h4 a,.main .title .h4 b{
-     padding: 15px;
- }
- .main .title h4 a.active{
-     color: #ea6f5a !important;
-     border-bottom: 2px solid #ea6f5a;
- }
- .main .title h4 a:hover{
-     color: #ea6f5a !important;
-     border-bottom: 2px solid #ea6f5a;
- }
- .main form{
-     margin: 0 0 30px;
-     color: #969696;
- }
- .main form .input-prepend{
-     position: relative;
-     width: 100%;
- }
- .main form .input-prepend input{
-     width: 100%;
-     height: 50px;
-     padding: 4px 12px 4px 35px;
-     border: 1px solid #c8c8c8;
-     border-bottom: 0;
- }
- .main form .input-prepend input{
-     width: 100%;
-     height: 50px;
-     padding: 4px 12px 4px 35px;
-     border: 1px solid #c8c8c8;
-     border-bottom: 0;
- }
- .main form input.top-radius{
-     border-radius: 4px 4px 0 0;
- }
- .main form input.bottom-radius{
-     border-radius:  0 0 4px 4px;
-     border-bottom: 1px solid #c8c8c8;
- }
- .main form .input-prepend i {
-     position: absolute;
-     color: #969696;
-     top: 15px;
-     left: 15px;
-     font-size: 18px;
- }
- .main form .remember{
-     float: left;
-     margin: 15px 0;
- }
- .main form .help{
-     float: right;
-     margin: 15px 0 ;
- }
- .main form>input{
-     width: 100%;
-     /*设置为块元素不受浮动影响*/
-     display: block;
-     border-radius: 20px;
- }
- .main .more-sign p{
-     position: relative;
-     font-size: 14px;
-     color: #b8b8b8;
-     margin-bottom: 20px;
- }
- .main .more-sign p::before{
-     content: "";
-     width: 60px;
-     border-bottom: 1px solid #b8b8b8 ;
-     position: absolute;
-     top: 10px;
-     left: 30px;
- }
- .main .more-sign p::after{
-     content: "";
-     width: 60px;
-     border-bottom: 1px solid #b8b8b8 ;
-     position: absolute;
-     top: 10px;
-     right: 30px;
- }
- .main .more-sign ul{
-    margin-bottom: 20px;
- }
- .main .more-sign ul li{
-     display: inline-block;
-     color: white;
-     border-radius: 50%;
-     margin: 0 5px;
- }
- .main .more-sign ul li.weibo{
-     background-color: #e05224;
- }
- .main .more-sign ul li.weixin{
-     background-color: #00bb29;
- }
- .main .more-sign ul li.qq{
-     background-color: #498ad5;
- }
- .main .more-sign ul li:nth-child(4){
-    background-color: rgb(248,248,248);
- }
- .main .more-sign ul li a{
-     display: block;
-     width: 50px;
-     height: 50px;
-     border-radius: 50%;
-     line-height: 50px;
- }
- .main .more-sign ul li.other{
-     color: #939393;
- }
- .main .more-sign ul li a i{
-     font-size: 25px;
-     line-height: 50px;
- }
-
- .main form input.sign-up-btn{
-     margin-top: 20px;
- }
-.main form p.sign-up-msg{
+.main .title {
+    margin:0 auto 50px;
+    padding:10px;
+    color:#939393;
+}
+.main .title h4 {
+    margin:0;
+    font-size:18px;
+}
+.main .title h4 a,.main .title h4 b {
+    padding:10px;
+}
+.main .title h4 a.active {
+    font-weight:700;
+    color:#ea6f5a!important;
+    border-bottom:2px solid #ea6f5a;
+}
+.main .title h4 a:hover {
+    border-bottom:2px solid #ea6f5a;
+}
+.main form {
+    margin:0 0 30px;
+    color:#969696;
+}
+.main form .input-prepend {
+    position:relative;
+    width:100%;
+}
+.main form .input-prepend input {
+    width:100%;
+    height:50px;
+    padding:4px 12px 4px 35px;
+    border:1px solid #c8c8c8;
+    border-bottom:none;
+    background-color:rgb(248,248,248)
+}
+.main form input.top-radius {
+    border-radius:4px 4px 0 0;
+}
+.main form input.bottom-radius {
+    border-radius:0 0 4px 4px;
+    border-bottom:1px solid #c8c8c8;
+}
+.main form .input-prepend i {
+    position:absolute;
+    color:#969696;
+    top:15px;
+    left:15px;
+    font-size:20px;
+}
+.main form .remember {
+    float:left;
+    margin:25px 0;
+}
+.main form .help {
+    float:right;
+    margin:25px 0;
+}
+.main form>input {
+    width:100%;
+    display:block;
+    height:45px;
+    border-radius: 20px;
+}
+.main .more-sign p {
+    position:relative;
+    font-size:14px;
+    color:#b8b8b8;
+    margin-bottom:20px;
+}
+.main .more-sign p:before {
+    content:"";
+    width:60px;
+    border-bottom:1px solid #b8b8b8;
+    position:absolute;
+    top:10px;
+    left:30px;
+}
+.main .more-sign p:after {
+    content:"";
+    width:60px;
+    border-bottom:1px solid #b8b8b8;
+    position:absolute;
+    top:10px;
+    right:30px;
+}
+.main .more-sign ul {
+    margin-bottom:20px;
+}
+.main .more-sign ul li {
+    display:inline-block;
+    border-radius: 50%;
+    color:white;
+    margin:0 5px;
+}
+.main .more-sign ul li.weibo {
+    background:#e05244;
+}
+.main .more-sign ul li.weixin {
+    background:#00bb29;
+}
+.main .more-sign ul li.qq {
+    background:#498ad5;
+}
+.main .more-sign ul li a {
+    width:50px;
+    height:50px;
+    line-height:50px;
+    display:block;
+}
+.main .more-sign ul li.other {
+    background:rgb(248,248,248);
+    color:#939393;
+}
+.main .more-sign ul li a i {
+    font-size:25px;
+}
+.main form input.sign-up-btn {
+    margin-top:20px;
+}
+.main form p.sign-up-msg {
     margin:15px 0;
-    text-align: center;
-    font-size: 12px;
-    line-height: 20px;
-    color: #969696;
+    text-align:center;
+    font-size:12px;
+    line-height:20px;
+    color:#969696;
 }
-.main form .ssm{
-    position: relative;
-    line-height: 30px;
+.main form .ssm {
+    position:relative;
+    line-height:36px;
 }
-.main form .input-prepend a.send-ssm{
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 100px;
-    font-size: 14px;
-    border-radius:20px ;
-    opacity: 0.5;
-    color: #fff !important;
+.main form .input-prepend a.send-ssm {
+    position:absolute;
+    top:7px;
+    right:10px;
+    width:100px;
+    height:36px;
+    display:block;
+    font-size:12px;
+    border-radius:20px;
+    opacity: .8;
+    color:#fff!important;
 }
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-    .logo{
-        display: none;
+@media (max-width:768px) {
+    .logo {
+        display:none;
     }
-    html,body,.sign{
-        background-color: #fff !important;
+    #sign-template {
+        background:#fff;
     }
-    .main{
+    .main {
         box-shadow: none;
-        margin: 0 auto;
+        margin:0 auto;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
