完成轮播的设计

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,58 +1,74 @@
-* {
-    box-sizing:border-box;
+/*-----------------公共样式---------------------*/
+*{
+    box-sizing: border-box;
 }
-html,body {
-    height:100%;
-    background:#fff;
-    color:#333;
+html,body{
+    height: 100%;
+    background-color: #fff;
+    color: #333;
 }
-#__nuxt {
-    height:100%;
+#__nuxt{
+    height: 100%;
 }
-#sign-template {
-    height:100%;
-    background:#f1f1f1;
+#sign-template{
+    height: 100%;
+    background-color: #f1f1f1;
 }
-#default-template {
-    height:100%;
-    padding-top:56px;
-    background:#ffff;
+#default-template{
+    height: 100%;
+    padding-top: 56px;
+    background-color: #fff;
 }
-a,a:hover,a:focus {
+a,a:hover,a:focus{
     text-decoration: none!important;
-    color:inherit!important;
+    color: inherit!important;
 }
-input:focus {
-    outline:none;
+input:focus{
+    outline: none;
 }
-h1,h2,h3,h4,h5,h6 {
-    margin:0;
-    padding:0;
+h1,h2,h3,h4,h5,h6{
+    padding: 0;
+    margin: 0;
 }
-ul,ol,dl {
-    list-style:none;
-    margin:0!important;
-    padding:0!important;
+ul,ol,dl{
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
-.my-container {
+.my-container{
     margin-right: auto;
     margin-left: auto;
     padding-left: 15px;
-    padding-right: 15px
+    padding-right: 15px;
 }
-@media (min-width: 992px){
-    .my-container {
+@media (min-width: 992px) {
+    .my-container{
         width: 960px!important;
     }
 }
-
-@media (max-width: 1080px){
-    .my-container {
+@media (max-width: 1080px) {
+    .my-container{
         width: 750px!important;
     }
 }
+/*-----------------首页布局---------------------*/
+.index{
+    padding-top: 30px;
+}
+.index .main{
+    padding-right: 0;
+}
+.index .main .banner img{
+    width: 100%;
+}
+.index .aside{
+    padding: 0 0 0 4.1667%;
+}
+.index .aside .board img{
+    width: 100%;
+    margin-bottom: 5.5px;
+}
 
-
-
-
-
+/*----------------------------------------------*/
+/*-----------------文章页面布局-----------------*/
+/*-----------------用户页面---------------------*/
