--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,8 +58,52 @@ ul,ol,dl{
 .index .main{
     padding-right: 0;
 }
+.index .main .banner{
+    margin-bottom: 35px;
+}
 .index .main .banner img{
     width: 100%;
+}
+.index .main .recommend-collection{
+    margin-bottom: 10px;
+}
+.index .main .recommend-collection{
+
+}
+.index .main .recommend-collection .more-hot-collection{
+    display: inline-block;
+    color:#787878;
+    font-size: 14px;
+    border: none;
+    background: none;
+    height: 32px;
+    line-height: 32px;
+    padding-bottom: 30px;
+}
+.index .main .recommend-collection a{
+    min-height: 32px;
+    display: inline-block;
+    margin: 0 18px 18px 0;
+    border-radius: 6px;
+    background-color: #f7f7f7;
+    border: 1px solid #ccc;
+    overflow: hidden;
+}
+.index .main .split-line{
+    margin: 0 0 15px;
+    border-bottom: 1px solid #f0f0f0;
+}
+.index .main .recommend-collection a img{
+    width: 32px;
+    height: 32px;
+    vertical-align: bottom;
+    border-radius: 5px;
+}
+.index .main .recommend-collection a span {
+    display: inline-block;
+    font-size: 14px;
+    padding: 0 10px;
+    line-height: 32px;
 }
 .index .aside{
     padding: 0 0 0 4.1667%;
@@ -68,7 +112,115 @@ ul,ol,dl{
     width: 100%;
     margin-bottom: 5.5px;
 }
+.note-list{
+    border: 0;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.note-list li {
+    position: relative;
+    width: 100%;
+    padding: 0 0 17px 0 ;
+    margin:  0 0 17px 0 ;
+    border-bottom: 1px solid #ccc;
+    word-wrap: break-word;
+}
+.note-list li.have-img>.wrap-img{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    margin-top: -60px;
+    width: 150px;
+    height: 120px;
+}
+.note-list li.have-img>.wrap-img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    border: 1px solid #f0f0f0;
+}
+.note-list li.have-img .content{
+    padding-right: 160px;
+}
+.note-list .auther{
+    margin-bottom: 14px;
+    font-size: 13px;
+}
+.note-list .auther .avatar, .note-list .auther .info{
+    display: inline-block;
+    vertical-align: middle;
+}
+.avatar{
+    width: 32px;
+    height: 32px;
+    display: block;
+}
+.avatar img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+}
+.note-list .auther .avatar{
+    margin: 0 5px 0 0 ;
+}
+.note-list .auther .info .time{
+    color: #969696;
+    padding-left: 5px;
+}
+.note-list .title{
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 7px;
+}
+.note-list .title:visited{
+    color: #969696;
+}
+.note-list .abstract{
+    font-size: 13px;
+    line-height: 24px;
+    margin: 0 0  7px 0;
+}
+.note-list .meta{
+    font-size: 12px;
+    line-height: 20px;
+    font-weight: 400px;
+}
+.note-list .meta .collection-tag{
+    color: #ea6f5a !important;
+    border: 1px solid #ea6f5a;
+    padding: 3px 6px;
+    border-radius: 4px;
+    margin-right: 10px;
+    transition: all ease-in .5s;
+}
+.note-list .meta .collection-tag:hover{
+    background-color: rgba(254,247,246);
+    border-color: rgba(236,97,73) ;
+}
+.note-list .meta .tag{
+    margin-right: 10px;
+    color: #b4b4b4 !important;
+}
 
+.note-list .meta .tag:hover{
+    color: rgb(120,120,120) !important;
+}
+.note-list .meta span{
+    color: #b4b4b4;
+}
+@media (max-width: 1080px) {
+    .note-list li.have-img .wrap-img{
+        margin-top: -60px;
+        bottom: 40px;
+        width: 125px;
+        height: 100px;
+    }
+    .note-list li.have-img>div{
+        padding-right: 135px;
+    }
+}
 /*----------------------------------------------*/
 /*-----------------文章页面布局-----------------*/
 /*-----------------用户页面---------------------*/
